--- a/makersPlaceProject/frontend/package.json
+++ b/makersPlaceProject/frontend/package.json
@@ -8,11 +8,13 @@
     "@testing-library/react": "^9.4.0",
     "@testing-library/user-event": "^7.2.1",
     "axios": "^0.19.1",
+    "debounce": "^1.2.0",
     "jwt-decode": "^2.2.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-masonry-component": "^6.2.1",
     "react-redux": "^7.1.3",
+    "react-router-dom": "^5.1.2",
     "react-scripts": "^3.3.0",
     "redux": "^4.0.5",
     "redux-logger": "^3.0.6",
