--- a/makersPlaceProject/frontend/package.json
+++ b/makersPlaceProject/frontend/package.json
@@ -10,9 +10,11 @@
     "axios": "^0.19.1",
     "debounce": "^1.2.0",
     "jwt-decode": "^2.2.0",
+    "prop-types": "^15.7.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-masonry-component": "^6.2.1",
+    "react-masonry-css": "^1.0.14",
     "react-redux": "^7.1.3",
     "react-router-dom": "^5.1.2",
     "react-scripts": "^3.3.0",
